--- a/cul-de-cats/app/views/yards/index.erb
+++ b/cul-de-cats/app/views/yards/index.erb
@@ -1,7 +1,8 @@
 <h1>Yards</h1>
 
-<a href="/yards/new">Create New Yard</a>
-
+<strong><a href="/yards/new">Create New Yard</a></strong>
+<br>
+<br>
 <% @yards.each do |yard| %>
   <p>
     <a href="/yards/<%= yard.id %>">
