rails forms and strong params

--- a/culdecats-rails/app/views/yards/index.html.erb
+++ b/culdecats-rails/app/views/yards/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Yards</h1>
 
-<strong><a href="/yards/new">Create New Yard</a></strong>
+<strong><%= link_to "Create New Yard", new_yard_path %></strong>
 <br>
 <br>
 <% @yards.each do |yard| %>
