--- a/culdecats-rails/app/views/yards/show.html.erb
+++ b/culdecats-rails/app/views/yards/show.html.erb
@@ -4,4 +4,5 @@
 
 <p>Patrolled by: <%= link_to @yard.cat.name, @yard.cat %></p>
 
+<%= link_to "Edit Yard", edit_yard_path(@yard) %>
 <%= link_to "All Yards", yards_path %>
