--- a/rails-auth/app/views/layouts/application.html.erb
+++ b/rails-auth/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <%= link_to "Goodbye, #{current_user.email}", logout_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Log in', login_path %>
+    <% end %>
+    <p><%= flash[:message] %></p>
     <%= yield %>
   </body>
 </html>
